force-app/main/default/objects/SL_Filter_Field__c/SL_Filter_Field__c.object-meta.xml
<CustomObject>
    <label>ME Core: Filter Field</label>
    <nameField>
        <label>Custom Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>