force-app/main/default/objects/SL_Filter_Field__c/fields/API_Lable__c.field-meta.xml
<CustomField>
    <fullName>API_Lable__c</fullName>
    <label>API Lable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>