force-app/main/default/objects/SL_Filter_Field__c/fields/Filter_Tab__c.field-meta.xml
<CustomField>
    <fullName>Filter_Tab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter Tab</label>
    <referenceTo>Filter_Tab__c</referenceTo>
    <relationshipName>Filter_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>