force-app/main/default/objects/SL_Filter_Field__c/fields/Parent_Ref_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ref_Field__c</fullName>
    <label>Parent Ref Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>